# llm-router

./: .gitattributes  1_ArchRouter_Example.ipynb  1_IntentRouter_Example.ipynb  2_Embedding_NN_Training.ipynb  3_Embedding_NN_Usage.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  sonarqube.yml
demo/: README.md  app.py  env_template.txt  requirements.txt
demo/loadtest/: locustfile.py  metrics.py  tasks.py
deploy/helm/llm-router/: HELM_IMPROVEMENT_PLAN.md  README.md  values.override.yaml.sample  values.yaml
deploy/helm/llm-router/templates/: router-controller-configmap.yaml  router-controller-deployment.yaml
launchable/: 1_Deploy_LLM_Router.ipynb
multimodal_router/: .dockerignore  1_ArchRouter_Example.ipynb  2_Embedding_NN_Training.ipynb  3_Embedding_NN_Usage.ipynb  ArchRouter_Example.ipynb  Embedding_NN_Training.ipynb  Embedding_NN_Usage.ipynb  MANIFEST.in  README.md  configs  pyproject.toml
multimodal_router/demo/: Dockerfile  README.md  app.py  env_template.txt  requirements.txt  run.sh
multimodal_router/scripts/: run_local.sh
multimodal_router/src/nat_sfc_router/configs/: config.yml
multimodal_router/src/nat_sfc_router/functions/: __init__.py  healthcheck_fn.py  hf_intent_objective_fn.py  nn_objective_fn.py  router_fn.py  router_only_fn.py
multimodal_router/src/nat_sfc_router/training/: README.md  __init__.py  generate_embeddings.py  hf_evaluations_test.json  hf_evaluations_train.json  model_router.py  nn_router.py  prepare_hf_data.py  requirements.txt  router_usage_examples.py
multimodal_router/src/nat_sfc_router/training/router_artifacts/: model_names.joblib  nn_router.pth
src/nat_sfc_router/: register.py
src/nat_sfc_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nat_sfc_router/configs/: config.yml
src/nat_sfc_router/functions/: __init__.py  hf_intent_objective_fn.py  nn_objective_fn.py  router_fn.py
src/nat_sfc_router/schema/: openai_chat_request.py
src/nat_sfc_router/training/: README.md  model_router.py  nn_router.py  prepare_hf_data.py
src/nat_sfc_router/training/router_artifacts/: best_hyperparameters.joblib  xgb_multi_router.joblib
src/router-controller/crates/llm-router-gateway-api/src/: error.rs  proxy.rs
